# synthts_et

./: README.md
synthts_et/: .gitignore  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  build.sh  config.status  configure  configure.ac  in.txt  run.sh  sisend.txt
synthts_et/autom4te.cache/: output.1  requests  traces.0  traces.1
synthts_et/etana/: Makefile.am  Makefile.in  disambiguator.cpp  linguistic.cpp  t3lex.h
synthts_et/fsc/: Makefile.am  Makefile.in
synthts_et/htsvoices/: eki_et_eva.htsvoice  eki_et_eva001.htsvoice  eki_et_eva002.htsvoice  eki_et_eva003.htsvoice  eki_et_evas.htsvoice  eki_et_khn.htsvoice  eki_et_rna.htsvoice
synthts_et/include/: HTS_engine.h  func.h  lists.h  mklab.h  num.h  syls.h  util.h
synthts_et/lib/: Makefile.in
synthts_et/lib/engine/: HTS_engine.c  HTS_engine_patches.c  Makefile.am  Makefile.in
synthts_et/lib/etana/: Makefile.am  Makefile.in  linguistic.cpp  morphinfo.h
synthts_et/lib/fsc/: Makefile.am  Makefile.in  stdfsc.h
synthts_et/lib/label/: Makefile.am  Makefile.in  label.cpp  label.h  mklab.cpp  number.cpp  syls.cpp  util.cpp  util.h  word.cpp  word.h
synthts_et/lib_utt/: Makefile.am  Makefile.in  func.cpp  label.cpp  num.cpp  syls.cpp  util.cpp
