
#EXTRA_DIST = AUTHORS COPYING ChangeLog INSTALL NEWS README Makefile.mak

SUBDIRS = lib/engine lib/label/ lib/fsc lib/etana bin

#include_HEADERS = include/HTS_engine.h lib/etana/proof.h

DISTCLEANFILES = *.log *.out *~ config/*~ include/*~

MAINTAINERCLEANFILES = aclocal.m4 configure Makefile.in config/compile \
                       config/config.guess config/config.sub config/depcomp \
                       config/install-sh config/missing
