
#EXTRA_DIST = Makefile.mak

#INCLUDES = -I$(top_srcdir)/include

lib_LIBRARIES = libFsc.a

libFsc_a_SOURCES = fscinit.cpp fsdll.cpp fsfile.cpp fshugeinteger.cpp fsmemory.cpp fsstring.cpp fstime.cpp fsvar.cpp fsdata.cpp fsexception.cpp fsfixalloc.cpp fslist.cpp fsreg.cpp fsthread.cpp fstrace.cpp fswav.cpp


DISTCLEANFILES = *.log *.out *~

#MAINTAINERCLEANFILES = Makefile.in
